@startuml
skinparam linetype ortho
skinparam backgroundColor #1E1E1E
skinparam defaultTextAlignment center
skinparam ArrowColor #B0C4DE
skinparam shadowing false
skinparam FontColor #FFFFFF
skinparam classFontColor #FFFFFF
skinparam classAttributeFontColor #FFFFFF
skinparam classMethodFontColor #FFFFFF

skinparam class {
  BackgroundColor #2D2D2D
  BorderColor #8A8A8A
  FontColor #E0E0E0
}

!include Mapper.puml
!include ToDTOMapper.puml
!include LongIdMapper.puml
!include StringNameMapper.puml
!include LongVersionMapper.puml

interface MeasureUnitToMeasureUnitDTOMapper extends Mapper, ToDTOMapper {
    + void map(MeasureUnit measureUnit, MeasureUnitDTO measureUnitDTO)
    + MeasureUnitDTO mapToDTO(MeasureUnit measureUnit)
}

class SimpleMeasureUnitToMeasureUnitDTOMapper implements MeasureUnitToMeasureUnitDTOMapper {
    - LongIdMapper longIdMapper
    - StringNameMapper stringNameMapper
    - LongVersionMapper longVersionMapper

    + MeasureUnitDTO mapToDTO(MeasureUnit measureUnit)
    + void map(MeasureUnit measureUnit, MeasureUnitDTO measureUnitDTO)
    - void mapId(MeasureUnit measureUnit, MeasureUnitDTO measureUnitDTO)
    - void mapName(MeasureUnit measureUnit, MeasureUnitDTO measureUnitDTO)
    - void mapVersion(MeasureUnit measureUnit, MeasureUnitDTO measureUnitDTO)
}

SimpleMeasureUnitToMeasureUnitDTOMapper --> LongIdMapper
SimpleMeasureUnitToMeasureUnitDTOMapper --> StringNameMapper
SimpleMeasureUnitToMeasureUnitDTOMapper --> LongVersionMapper
@enduml